# feishu_plugin_rembg

./: .gitignore  .replit  README.md  buid.sh  package.json  pyproject.toml  replit.nix
backend/: .env  main.py  requirements.txt
backend/playground/: rmbg_demo.py  search_and_replace.py
backend/static/assets/: RenderMarkDown-2XXFPEWB.27cb76dd.js  index.cf8ef681.css  index.d75c9a7e.js
frontend/: package-lock.json  tsconfig.json  vite.config.js
frontend/src/: App.css  App.tsx
frontend/src/locales/: en.json  zh.json
src/: App.tsx
